@@ -29,7 +29,7 @@
 #include "PageClientEfl.h"
 #include "TextureMapperGL.h"
 #include "TextureMapperLayer.h"
-#include "ewk_private.h"
+#include "ewk_view_private.h"
 
 namespace WebCore {
 
